feat(rider): 라이더 상태 수정 및 주문 시 로직  추가
